2009-01-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Merge with 1_x_x branch
	* Added base model and implemented "save" method

2009-01-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Released version 1.5.2

2009-01-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Template is now valid "XMTML 1.0 strict"

2008-12-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed cache clearing in eID to be compatible with TYPO3 4.3
	* Removed old styles
	* Changed default order of codes to show form after the comments
	* Added clearCache to eID links, reordered check for storagePid

2008-12-13  Dmitry Dulepov  <dmitry@typo3.org>

	* Removed non-standard autocomplete attribute from template

2008-11-28  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #9760: Multiple pages with comment form - one storage folder
	* Fixed bug #9635: ###UID### is not replaced in tx_comments template
	* Fixed bug #9456: https Links won'be detected
	* Released version 1.5.1

2008-11-19	Dmitry Dulepov	<dmitry@typo3.org>

	* Better message about page browser missing

2008-11-04	Dmitry Dulepov	<dmitry@typo3.org>

	* Initial work on comment model object
	* Add directories for MVC
	* Rename res/ directory and update all references
	* Move pi1/static/ to static/
	! comments 2.0 development starts

2008-09-02	Dmitry Dulepov	<dmitry@typo3.org>

	* Changed minimum PHP version to 5.2.0 because Debian still does not have 5.2.1

2008-08-08	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9054: remove email from default required fields
	* Fixed bug #8145: wrong links in notification mail if typo3 runs in a subdir of domain
	* Fixed bug #7926: small template error
	* Fixed bug #7927: please add an additional hook to make my email notification extension working

2008-07-24	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed error in default template (###NO_COMMENTS### in the wrong place)

2008-07-23	Dmitry Dulepov	<dmitry@typo3.org>

	* Updated function index in files
	* Released version 1.4.2
	* Fixed error with subparts